Opened 14 years ago

Closed 14 years ago

#1525 closed defect (fixed)

configure does not test for SDL_atoi

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: ffplay
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

http://thread.gmane.org/gmane.comp.video.ffmpeg.user/38223/focus=38465
The user report indicates that configure enables HAVE_SDL even if SDL_atoi() - needed for ffplay compilation since 7821264c - is not available.

Change History (1)

comment:1 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: newclosed

replaced by plain atoi()

Note: See TracTickets for help on using tickets.